--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2023 Sebastian Andersson <sebastian@bittr.nu>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+
 [package]
 name = "advent_of_tools"
 version = "0.1.0"
