--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,22 @@ jobs:
             - name: cargo check
               run: cargo check
 
+    check-fmt:
+        runs-on: ubuntu-latest
+        name: Check format
+        steps:
+            - uses: actions/checkout@v3
+            - name: cargo fmt
+              run: cargo fmt --check
+
+    check-clippy:
+        runs-on: ubuntu-latest
+        name: Check clippy
+        steps:
+            - uses: actions/checkout@v3
+            - name: cargo clippy
+              run: cargo clippy
+
     test:
         runs-on: ubuntu-latest
         name: Test
